# mc-agent

./: .gitignore  README.md  bridge.js  cortex.py  future_work.txt  llm_debug_Agent1.txt  llm_debug_Agent2.txt  mc-utils.js  memory.db  package-lock.json  package.json  pyproject.toml  working_memory.json
saves/: system_instr_before_autonomous_system.txt
