[project]
name = "mc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "torch>=2.3.0",
    "google-genai>=1.75.0",
    "python-dotenv>=1.2.2",
]
